// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders react video player 1`] = `
<DocumentFragment>
  <div
    style="width: 640px; height: 360px;"
  />
</DocumentFragment>
`;

exports[`renders responsive react video player 1`] = `
<DocumentFragment>
  <div
    class="w-full relative pt-[56.25%]"
  >
    <div
      class="absolute top-0 left-0"
      style="width: 100%; height: 100%;"
    />
  </div>
</DocumentFragment>
`;
